# NeoNano

./: .gitignore  Cargo.toml  README.md  rust.txt
src/: document.rs  editor.rs  filetype.rs  floating_item.rs  highlighting.rs  lsp.rs  main.rs  row.rs  terminal.rs
test/: edit_save.txt  highlighting.txt  main.c
