[package]
name = "hecto"
version = "0.1.0"
edition = "2021"
authors = ["Kota Toda <neonano@rqda.wtf>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "2"
thiserror = "1.0.56"
tree-sitter = "0.20.10"
tree-sitter-highlight = "0.20.1"
tree-sitter-javascript = "0.20.1"
tree-sitter-rust = "0.20.4"
unicode-segmentation = "1"
