[package]
name = "hecto"
version = "0.1.0"
edition = "2021"
authors = ["Kota Toda <neonano@rqda.wtf>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
lsp-types = "0.95.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
termion = "2"
thiserror = "1.0.56"
tree-sitter = "0.20.10"
tree-sitter-c = "0.20.6"
tree-sitter-cpp = "0.20.3"
tree-sitter-go = "0.20.0"
tree-sitter-highlight = "0.20.1"
tree-sitter-python = "0.20.4"
tree-sitter-rust = "0.20.4"
unicode-segmentation = "1"
